[package]
authors = ["Sybrand Aarnoutse (syberant)"]
license = "MIT"
name = "evolvim"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "evolvim"
path = "./src/main/mod.rs"

[[bin]]
name = "check_terrain_gen"
path = "./src/checkTerrainGen.rs"

[dependencies]
bincode = "1.0.1"
noise = "0.5.1"
piston_window = "0.80.0"
rand = "0.5.4"
serde = "1.0.75"
serde_derive = "1.0.75"

[dependencies.nalgebra]
features = ["serde-serialize"]
version = "0.16.0"

[dependencies.piston2d-graphics]
features = ["glyph_cache_rusttype"]
version = "0.26.0"

[features]
bench = []

[lib]
name = "lib_evolvim"
path = "./src/lib/mod.rs"
