[package]
authors = ["Sybrand Aarnoutse (syberant)"]
edition = "2018"
license = "MIT"
name = "evolvim"
version = "0.2.0"

[[bin]]
name = "evolvim"
path = "./src/main/mod.rs"

[[bin]]
name = "evolvim_cli"
path = "./src/cli.rs"

[[bin]]
name = "check_terrain_gen"
path = "./src/checkTerrainGen.rs"

[dependencies]
bincode = "1.0.1"
clap = "2.32.0"
ctrlc = "3.1.1"
noise = "0.5.1"
piston2d-gfx_graphics = "0.51.0"
piston_window = "0.80.0"
rand = "0.5.4"
serde = "1.0.75"
serde_derive = "1.0.75"

[dependencies.nalgebra]
features = ["serde-serialize"]
version = "0.16.0"

[dependencies.piston2d-graphics]
features = ["glyph_cache_rusttype"]
version = "0.26.0"

[dependencies.rayon]
optional = true
version = "1.0.2"

[features]
bench = []
multithreading = ["rayon"]

[lib]
name = "lib_evolvim"
path = "./src/lib/mod.rs"
