[package]
authors = ["Sybrand Aarnoutse (syberant)"]
edition = "2018"
license = "MIT"
name = "evolvim-lib"
version = "0.2.0"

[dependencies]
bincode = "1.1.1"
noise = "0.5.1"
rand = "0.6.5"
serde = "1.0.87"
serde_derive = "1.0.87"
specs = "0.14.3"
nphysics2d = "0.16.1"
ncollide2d = "0.23.2"

[dependencies.nalgebra]
features = ["serde-serialize"]
version = "0.21.1"

[dependencies.rayon]
optional = true
version = "1.0.3"

[features]
bench = []
multithreading = ["rayon"]

[lib]
name = "lib_evolvim"
path = "./src/lib/mod.rs"
