[package]
authors = ["Sybrand Aarnoutse (syberant)"]
edition = "2018"
license = "MIT"
name = "evolvim-tools"
version = "0.2.0"

[[bin]]
name = "evolvim"
path = "./src/main/mod.rs"

[[bin]]
name = "evolvim_cli"
path = "./src/cli.rs"

[[bin]]
name = "check_terrain_gen"
path = "./src/checkTerrainGen.rs"

[dependencies]
bincode = "1.1.1"
clap = "2.32.0"
ctrlc = "3.1.1"
evolvim-lib = { path = "../evolvim-lib" }
noise = "0.5.1"
piston2d-gfx_graphics = "0.56.0"
piston_window = "0.89.0"
rand = "0.6.5"
serde = "1.0.87"
serde_derive = "1.0.87"

[dependencies.piston2d-graphics]
features = ["glyph_cache_rusttype"]
version = "0.30.0"