[package]
authors = ["Sybrand Aarnoutse (syberant)"]
edition = "2018"
license = "MIT"
name = "evolvim-tools"
version = "0.2.0"

[[bin]]
name = "evolvim"
path = "./src/main/mod.rs"

[[bin]]
name = "evolvim_cli"
path = "./src/cli.rs"

[dependencies]
clap = "2.32.0"
ctrlc = "3.1.1"
evolvim-lib = { path = "../evolvim-lib" }
piston2d-gfx_graphics = "0.56.0"
piston_window = "0.89.0"
nphysics2d = "0.11.1"
specs = "0.14.3"

[dependencies.piston2d-graphics]
features = ["glyph_cache_rusttype"]
version = "0.30.0"